main.css
* {
    box-sizing: border-box;
}

body {
    height: 100%;
    margin: 0;
    font-family: 'Rubik', sans-serif;
    background-color: #f1f1f3;
}

header {
    width: 100%;
    height: 100%;
}

header {   
    text-align: center;
}

.banner {
    width: 100%;
    height: 225px;
    background-image: url("https://github.com/mmbmf1/bloc-portfolio/blob/master/images/20190528_080321.jpg?raw=true");
    background-size: cover;
    background-position: center bottom;
    opacity: .6;
    filter: brightness(80%);
}

.nav {
    position: absolute;
    top: 30px;
    width: 100%;
    margin: 10px 0;

}

.nav-wrap {
    display: flex;
    flex-direction: column;
}

.nav-wrap img {
    width: 7em;
    border-radius: 100%;
    margin-left: auto;
    margin-right: auto;
    padding: 5px 0;
}

.nav-foot {
    display: none;
}


.home-link {
    margin: 10px;
    font-family: 'Poly', serif;
    font-weight: bolder;
    font-size: 30px;
    color: white;
}

section {
    margin: 10px;
    padding: 10px;
    line-height: 2.0em;
    border-bottom: 1px solid lightgrey;
}

h2 {
    font-family: 'Poly', serif;
    font-size: 1.5em;
    line-height: 1.5em;
    color: #323232;
}

p {
    color: grey;
}

.links , .project-buttons , .contact-me {
    display: flex;
    justify-content: center;
    align-items: center;
}

.button:visited , .button:active {
    color:#8CC63E;
}

.button {
    display: inline-block;
    width: 100%;
    margin: 10px;
    background-color: #034000;
    color: #8CC63E;
    text-align: center;
    font-size: 1em;
    font-weight: 700;
    border: 1px solid lightgrey;
    border-radius: 4px;
    cursor: pointer
}

.button:hover {
    font-weight: 700;
    background-color: white;
    color: #034000;
    border: 3px solid #034000;
}

.contact-me {
    display: flex;
    width: 100%;
    height: 100%;
}

#project-button {
    display: none;
}

a:link {
    text-decoration: none;
}

a:visited , a:active {
    color: unset;
}

.home-link:visited {
    color: white;
}

.project-1 {
    display: flex;
    flex-direction: column;
}

.img-container , .project-desc , #quizapp {
    width: 100%;
    height: 80%;
    margin-bottom: 10px;
}

.project-desc {
    width: 100%;
    height: 100%;
}

.project-desc h3 {
    margin: 0;
    font-family: 'Poly', serif;
    color: #323232;
}

.tech-icons {
    margin: 0;
    display: inline;
    list-style: none;
}

.tech-icons li {
    float: left;
    padding: 5px;
    color: #034000;
}

.foot {
    margin-right: 10px;
    text-align: center;
    background-color: #f1f1f3;
}

.foot ul {
    padding: 0;
}

.icons li {
    display: inline;
    padding: 10px;
    font-size: 18pt;
    color: #034000;
}

i:hover {
    color: #8CC63E;
}

@media screen and (min-width:769px) {
    html , body {
        height: 100%;
    }

    header {
        position: fixed;
        width: 30%;
        text-align: right;
    }
    .nav {
        top: 22%;
        padding-right: 20px;
    }

    .nav-wrap img {
        margin-right: 15px;
    }

    .nav-foot {
        display: unset;
    }

    .home-link:hover {
        text-decoration: underline;
   }

    .banner {
        height: 100%;
    }
    
    main {
        position: relative;
        height: 100%;
        margin-left: 30%;
    }

    .main-wrap {
        position: absolute;
        top: 20%;
        margin: 0 60px;
        border-top: 2px solid lightgrey;
        border-bottom: 2px solid lightgrey;
    }

    section {
        line-height: 1.5em;
        border: none;
    }

    .button {
        width: 200px;
        padding: 10px;
    }

    .coding-reason {
        height: auto;
        padding-bottom: 30px;
    }

    .links {
        display: inline;
    }

    #learn-more , #project-button {
        display: inline;
        margin: 0;
        padding: 10px;
        background-color: #034000;
        color: #8CC63E;
        text-align: center;
        font-size: 1em;
        font-weight: 700;
        border: 1px solid lightgrey;
        border-radius: 4px;
        cursor: pointer;
    }

    #learn-more:hover , #project-button:hover {
        font-weight: 700;
        background-color: white;
        color: #034000;
        border: 3px solid #034000;
    }

    #project-button {
        width: 104.81px;
    }



    .bloc-projects {
        display: none;
    }

    .about-me {
        display: none;
    }

    .foot-wrap {
        display: none;
        height: 0;
    }
}

